--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "axios": "^1.7.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "rxjs": "^7.8.1",
+    "web-streams-polyfill": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
