--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "rxjs": "^7.8.1",
-    "web-streams-polyfill": "^4.0.0"
+    "web-streams-polyfill": "^4.0.0",
+    "websocket": "^1.0.35"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
