--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.26.0",
     "rxjs": "^7.8.1",
     "standardized-audio-context": "^25.3.76",
+    "styled-components": "^6.1.12",
     "web-streams-polyfill": "^4.0.0",
     "websocket": "^1.0.35"
   },
