--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@microsoft/signalr": "^8.0.7",
+    "@splinetool/react-spline": "^4.0.0",
     "@types/axios": "^0.14.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.3",
